--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Car Animation </title>
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Car Animation</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="sky">
+        <button id="play-button">
+          <img id="icon" src="soundoff.png" alt="play-button" />
+        </button>
+        <div class="trees"></div>
+        <div class="track"></div>
+        <div class="car">
+          <div class="wheel wheel1">
+            <img src="./images/car_wheel_left.png" alt="" />
+          </div>
+          <div class="wheel wheel2">
+            <img src="./images/car_wheel_right.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
-</head>
-<body>
-     <div class="container">
-         <div class="sky">
-             <div class="trees"></div>
-             <div class="track"></div>
-             <div class="car">
-                <div class="wheel wheel1">
-                    <img src="car_wheel_left.png" alt="">
-                </div>
-                <div class="wheel wheel2">
-                    <img src="car_wheel_right.png" alt="">
-                </div>
-             </div>
-         </div>
-     </div>
-</body>
+  </body>
 </html>
